--- a/oregon_public_library_counties.ipynb
+++ b/oregon_public_library_counties.ipynb
@@ -2327,6 +2327,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'Marion', '23376', '53828', 9.0, 16202, 0.7374999999999999, 0.4679166666666667),\n",
+       " (1, 'Jackson', '13963', '48688', 16.0, 9683, 0.6677777777777778, 0.44055555555555553),\n",
+       " (2, 'Douglas', '8335', '44023', 11.0, 4623, 0.6416666666666667, 0.3994444444444445),\n",
+       " (3, 'Grant', '1322', '44826', 2.0, 549, 0.796, 0.186),\n",
+       " (4, 'Jefferson', '2401', '48464', None, 926, 0.7833333333333333, 0.38999999999999996),\n",
+       " (5, 'Polk', '5716', '56032', 3.0, 3807, 0.834, 0.532),\n",
+       " (6, 'Clackamas', '28560', '72408', 14.0, 19887, 0.7746153846153845, 0.5734615384615385),\n",
+       " (7, 'Deschutes', '9156', '59152', 7.0, 8352, 0.6681818181818181, 0.4827272727272728),\n",
+       " (8, 'Linn', '9350', '49515', 9.0, 10034, 0.6625, 0.4175),\n",
+       " (9, 'Tillamook', '2598', '45061', 6.0, 1116, 0.8025, 0.4149999999999999),\n",
+       " (10, 'Yamhill', '8237', '58392', 7.0, 5164, 0.792, 0.40099999999999997),\n",
+       " (11, 'Baker', '2148', '43765', 7.0, 2941, 0.8442857142857143, 0.27),\n",
+       " (12, 'Josephine', '5246', '40705', 4.0, 3142, 0.656, 0.4739999999999999),\n",
+       " (13, 'Klamath', '5600', '42531', 11.0, 2925, 0.738, 0.46399999999999986),\n",
+       " (14, 'Umatilla', '7048', '50071', 13.0, 4529, 0.7958333333333334, 0.41916666666666663),\n",
+       " (15, 'Lincoln', '4845', '43291', 6.0, 1784, 0.8185714285714286, 0.40857142857142853),\n",
+       " (16, 'Benton', '7484', '54682', 4.0, 3265, 0.8250000000000001, 0.525),\n",
+       " (17, 'Columbia', '4288', '57449', 6.0, 2558, 0.72, 0.39999999999999997),\n",
+       " (18, 'Crook', '1381', '41777', 1.0, 771, 0.7150000000000001, 0.375),\n",
+       " (19, 'Sherman', '616', '42074', 1.0, 268, 0.88, 0.84),\n",
+       " (20, 'Wasco', '2998', '48510', 5.0, 1300, 0.625, 0.36),\n",
+       " (21, 'Harney', '1134', '39504', 1.0, 1058, 0.54, 0.2866666666666667),\n",
+       " (22, 'Lane', '29333', '47710', 16.0, 14874, 0.6264705882352941, 0.3529411764705883),\n",
+       " (23, 'Malheur', '3942', '37112', 4.0, 1794, 0.777142857142857, 0.31285714285714283),\n",
+       " (24, 'Wallowa', '1094', '44877', 3.0, 566, 0.9666666666666667, 0.5399999999999999),\n",
+       " (25, 'Washington', '40540', '74033', 18.0, 26834, 0.7795833333333335, 0.6450000000000001),\n",
+       " (26, 'Wheeler', '479', '33563', 2.0, 1332, 0.524, 0.06),\n",
+       " (27, 'Morrow', '1403', '54386', 5.0, 1169, 0.674, 0.36000000000000004),\n",
+       " (28, 'Clatsop', '3643', '49828', 4.0, 1561, 0.818, 0.458),\n",
+       " (29, 'Coos', '4440', '40848', 8.0, 5034, 0.643, 0.41200000000000003),\n",
+       " (30, 'Curry', '1449', '42519', 5.0, 674, 0.7733333333333334, 0.5266666666666667),\n",
+       " (31, 'Gilliam', '440', '39831', 2.0, 206, 0.745, 0.6),\n",
+       " (32, 'Hood River', '1607', '57269', 3.0, 1319, 0.87, 0.65),\n",
+       " (33, 'Lake', '979', '32769', 4.0, 667, 0.9133333333333334, 0.35333333333333333),\n",
+       " (34, 'Multnomah', '58320', '60369', 20.0, 25736, 0.7115999999999998, 0.6212000000000001),\n",
+       " (35, 'Union', '3441', '46228', 5.0, 1825, 0.8214285714285713, 0.4557142857142857)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "engine = create_engine('sqlite:///all_counties.sqlite', echo=False)\n",
+    "\n",
+    "all_county_data.to_sql('counties', con=engine)\n",
+    "engine.execute(\"SELECT * FROM counties\").fetchall()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
