Cleaned up comments in notebook

--- a/oregon_public_library_counties.ipynb
+++ b/oregon_public_library_counties.ipynb
@@ -11,17 +11,7 @@
     "import json\n",
     "from pprint import pprint \n",
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "#Create API URL\n",
-    "#API Variables used (as identified in the documentation here: https://api.census.gov/data/2017/acs/acs5/variables.html)   \n",
-    "#040 - state (41 - Oregon)\n",
-    "#860 - zip code tabulation area\n",
-    "#B00001_001E - Estimate!!Total - UNWEIGHTED SAMPLE COUNT OF THE POPULATION\n",
-    "#B19001_001E - Estimate!!Total - HOUSEHOLD INCOME IN THE PAST 12 MONTHS (IN 2017 INFLATION-ADJUSTED DOLLARS)\n",
-    "\n",
-    "county_pop_url = \"https://api.census.gov/data/2017/acs/acs5?get=NAME,GEO_ID,B00001_001E&for=county:*&in=state:41\"\n",
-    "county_hhi_url = \"https://api.census.gov/data/2017/acs/acs5?get=NAME,GEO_ID,B19013_001E&for=county:*&in=state:41\""
+    "from sqlalchemy import create_engine"
    ]
   },
   {
@@ -34,6 +24,22 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Create API URL\n",
+    "#API Variables used (as identified in the documentation here: https://api.census.gov/data/2017/acs/acs5/variables.html)   \n",
+    "#040 - state (41 - Oregon)\n",
+    "#B00001_001E - Estimate!!Total - UNWEIGHTED SAMPLE COUNT OF THE POPULATION\n",
+    "#B19001_001E - Estimate!!Total - HOUSEHOLD INCOME IN THE PAST 12 MONTHS (IN 2017 INFLATION-ADJUSTED DOLLARS)\n",
+    "\n",
+    "county_pop_url = \"https://api.census.gov/data/2017/acs/acs5?get=NAME,GEO_ID,B00001_001E&for=county:*&in=state:41\"\n",
+    "county_hhi_url = \"https://api.census.gov/data/2017/acs/acs5?get=NAME,GEO_ID,B19013_001E&for=county:*&in=state:41\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +112,7 @@
        "0500000US41031  Jefferson              2401"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +212,7 @@
        "0500000US41031  Jefferson             48464"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +315,7 @@
        "4  Jefferson              2401             48464"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +346,7 @@
        "(336, 28)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +433,7 @@
        "7                            Aloha Community Library  Washington     Public"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,6 +454,7 @@
     "# Pull through data only for Public and Volunteer libraries\n",
     "libraries = lib_transformed[~lib_transformed['type'].isin(['Academic', 'Special', 'Tribal'])]\n",
     "\n",
+    "# Preivew libraries dataframe\n",
     "libraries.head()"
    ]
   },
@@ -460,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +476,7 @@
        "(1253, 53)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,17 +486,13 @@
     "school_file = \"Resources/Oregon_Schools_Report_Card.csv\"\n",
     "school_df = pd.read_csv(school_file)\n",
     "\n",
-    "# school_df.dropna(inplace = True)\n",
-    "\n",
-    "# school_df['On-Time Graduation']=school_df['On-Time Graduation'].astype(int)\n",
-    "# school_df['College Going']=school_df['College Going'].astype(int)\n",
-    "\n",
+    "#Review size of dataframe\n",
     "school_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +659,7 @@
        "[337 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,12 +683,13 @@
     "# Replace NaN values with zeros\n",
     "hs_data = hs_data.fillna(0)\n",
     "\n",
+    "# Preview dataframe\n",
     "hs_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +856,7 @@
        "[337 rows x 6 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,6 +869,7 @@
     "# Replace NaN values with zeros\n",
     "final_hs_data = hs_data.fillna(0)\n",
     "\n",
+    "# Preivew final high school dataframe\n",
     "final_hs_data"
    ]
   },
@@ -877,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1129,7 @@
        "34     Yamhill                 7"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,13 +1144,16 @@
     "# Rename counts to reflect that they are the total public & volunteer libraries in the county\n",
     "county_libraries = county_libraries.rename(columns={'library_name':'county_libraries'})\n",
     "\n",
+    "# Reset index\n",
     "county_libraries.reset_index(inplace=True)\n",
+    "\n",
+    "# Preivew county library dataframe\n",
     "county_libraries.head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1480,7 @@
        "35     Yamhill               5164            0.792000           0.401000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1483,20 +1491,19 @@
     "                                                            'on_time_graduation': 'mean',\n",
     "                                                           'attending_college':'mean'})\n",
     "\n",
-    "# Drop type column from dataframe\n",
-    "# county_hs = county_schools.drop(columns=['school_type', 'students_enrolled', 'ela', 'math'])\n",
-    "\n",
     "# Rename counts to reflect that they are the total public schools in the county\n",
     "county_hs = county_schools.rename(columns={'school_name':'county_schools'})\n",
     "\n",
+    "# Reset index\n",
     "county_hs.reset_index(inplace=True)\n",
     "\n",
+    "# Preivew county high school dataframe\n",
     "county_hs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1823,21 +1830,22 @@
        "35       Union              3441             46228               5.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Merge Library and Census data\n",
-    "\n",
     "county_data = pd.merge(county_pop_hhi, county_libraries, how='left', on='county')\n",
-    "county_data.head(100)"
+    "\n",
+    "# Preview merged census & library dataframe\n",
+    "county_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2313,21 +2321,22 @@
        "35               1825            0.821429           0.455714  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Merge Library, Census data with School\n",
+    "oregon_county_data = pd.merge(county_data, county_hs, how='left', on='county')\n",
     "\n",
-    "all_county_data = pd.merge(county_data, county_hs, how='left', on='county')\n",
-    "all_county_data.head(100)"
+    "# Preview final merged dataframe\n",
+    "oregon_county_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2371,17 +2380,20 @@
        " (35, 'Union', '3441', '46228', 5.0, 1825, 0.8214285714285713, 0.4557142857142857)]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sqlalchemy import create_engine\n",
+    "# Create SQLite engine\n",
     "engine = create_engine('sqlite:///all_counties.sqlite', echo=False)\n",
     "\n",
-    "all_county_data.to_sql('counties', con=engine)\n",
-    "engine.execute(\"SELECT * FROM counties\").fetchall()\n"
+    "# Create database based on the final dataframe\n",
+    "oregon_county_data.to_sql('counties', con=engine)\n",
+    "\n",
+    "# View the data stored within the newly created database\n",
+    "engine.execute(\"SELECT * FROM counties\").fetchall()"
    ]
   },
   {
