--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -31,12 +31,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "    Description goes here."
+    "    This database is provided by the United States Census Bureau. To obtain this data, we used an API. The variables used (as identified in the documentation here: https://api.census.gov/data/2017/acs/acs5/variables.html), include state, zip code tabulation area, unweighted sample count of the population, and houshold income in the past 12 months. The county population information was extracted in JSON format from the American Community Survey 5 Year Estimates (2017) census API. Data frames were created for both the county population (pop_by_county) and the household income by county (hhi_by_county)."
    ]
   },
   {
@@ -82,12 +80,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "    Description goes here."
+    "    From the original JSON requests, new data frames were created with only the specific columns needed. The former header was dropped, and a new variable was created to grab only the 'county' and 'county_population' columns. The word county and the state were then dropped from the 'county' column in order to merge with other data sets (example: Marion County, Oregon changed to Marion). The county population data and the county median household data were then merged on the 'county' column."
    ]
   },
   {
@@ -101,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    From the original data frame, we copied the data to a new data frame with only the specific columns needed: Full Library Name, County, Type of Library. From there, we renamed columns and dropped the word “County” from the county column so that counties can match the US Census data (example: “Multnomah County” changed to “Multnomah”). Next, we transformed the data so that only Public and Volunteer libraries pulled through from the “type” column. We decided to exclude Academic, Special, and Tribal libraries because they aren’t all accessible to the public."
+    "    From the original data frame, we copied the data to a new data frame with only the specific columns needed: Full Library Name, County, Type of Library. From there, we renamed columns and dropped the word “County” from the county column so that counties can match the US Census data (example: “Multnomah County” changed to “Multnomah”). Next, we transformed the data so that only Public and Volunteer libraries pulled through from the “type” column. We decided to exclude Academic, Special, and Tribal libraries because they aren’t all accessible to the public. The data is then grouped by the 'county' column and merged with the Census data on 'county' using a left merge."
    ]
   },
   {
@@ -115,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    From the original data frame, we also copied this data to a new data frame with specific columns: School Name, School Type, County, Student Enrollment, English Language Arts, Mathematics, On-Time Graduation, College Going. Then, we renamed columns and dropped data for elementary and middle schools. The reason why we kept only high school data is because most of these students will have had ample time to access these public libraries, and we can better correlate accessibility to a public library with the likelihood of graduating on time or attending college."
+    "    From the original data frame, we also copied this data to a new data frame with specific columns: School Name, School Type, County, Student Enrollment, English Language Arts, Mathematics, On-Time Graduation, College Going. Then, we renamed columns and dropped data for elementary and middle schools. The reason that we kept only high school data is because most of these students will have had ample time to access these public libraries, and we can better correlate accessibility to a public library with the likelihood of graduating on time or attending college. These two columns consist of percent scores for each school and originally pull through as an object, so the % sign needed to be removed and the number divided by 100 to get a decimal. These are then cast as float. NaN values are replaced with 0 for future mean calculations. Report Card data is then grouped by county and left merged with Library and Census data on the 'county' column. The on_time_graduation and attending_college columns are calculated as an average percent for all public schools in the county."
    ]
   },
   {
@@ -131,6 +127,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FINDINGS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LESSONS LEARNED"
+   ]
   },
   {
    "cell_type": "code",
