--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    This database is provided by the United States Census Bureau. To obtain this data, we used an API. The variables used (as identified in the documentation here: https://api.census.gov/data/2017/acs/acs5/variables.html), include state, zip code tabulation area, unweighted sample count of the population, and houshold income in the past 12 months. The county population information was extracted in JSON format from the American Community Survey 5 Year Estimates (2017) census API. Data frames were created for both the county population (pop_by_county) and the household income by county (hhi_by_county)."
+    "    This database is provided by the United States Census Bureau. To obtain this data, we used an API. The variables used (as identified in the documentation here: https://api.census.gov/data/2017/acs/acs5/variables.html), include state, unweighted sample count of the population, and houshold income in the past 12 months. The county population information was extracted in JSON format from the American Community Survey 5 Year Estimates (2017) census API. Data frames were created for both the county population (pop_by_county) and the household income by county (hhi_by_county)."
    ]
   },
   {
@@ -122,11 +122,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "    Once the final DataFrame was fully transformed, all rows were created as records within a SQLite database using SQLAlchemy. This database can easily ingested into a relational database management system like Postgres."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,17 +136,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LESSONS LEARNED"
+    "    As anticipated, more populated counties like Clackamas, Washington, and Multnomah had the three highest average household incomes, the most libraries, and some of the highest percentages of students planning to attend college. However, due to the high student population they did not have the highest percentages of students graduating from high school on time.\n",
+    "    \n",
+    "    On the other hand, more rural counties such as Crook, Harney, and Wheeler had some of the lowest populations, average household incomes, and libraries. The data also shows that these counties have some of the worst on-time graduation and college going percentages in the entire state."
    ]
   },
   {
